--- a/Стиль/style.css
+++ b/Стиль/style.css
@@ -21,8 +21,12 @@
         padding: 20px 30px;
 
     }
+    
+    .block-form{
+        padding: 10px 0px;
+    }
 
-     .block-form__title{
+    .block-form__title{
         font-size: 40px;
         margin-bottom: 20px;
     }
@@ -158,6 +162,12 @@
 
     .radiobuttons__item input{
         display: none;
+    }
+
+    .button_defolt{
+        background-color: #bfc0c4;
+        cursor: pointer;
+        
     }
 
     .button{
