--- a/Стиль/style.css
+++ b/Стиль/style.css
@@ -18,13 +18,13 @@
         min-height: 100%;
         height: 100%;
         overflow: hidden;
-        padding: 20px 30px;
+        padding: 0px 30px;
 
     }
     
     .block-form__title{
         font-size: 40px;
-        margin-bottom: 20px;
+        margin: 20px 0px 0px 0px;
     }
     .block-form__input{
         margin-bottom: 15px;
@@ -163,7 +163,7 @@
     .button_defolt{
         background-color: #bfc0c4;
         cursor: pointer;
-        
+                
     }
 
     .button{
